--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
     "merge-stream": "^2.0.0",
     "mime-db": "^1.52.0",
     "mime-types": "^2.1.35",
+    "mini-css-extract-plugin": "^2.9.2",
     "nanoid": "^3.3.7",
     "neo-async": "^2.6.2",
     "no-case": "^3.0.4",
